--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,12 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #f5f5f5;
+    color: #0e0e10;
+    font-family: 'Montserrat', sans-serif;
+}
+
 @media (max-width: 1080px) {
     html {
         font-size: 93.75%;
