--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
 body {
     background-color: #f5f5f5;
     color: #0e0e10;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 @media (max-width: 1080px) {
@@ -20,4 +20,8 @@ body {
     html {
         font-size: 87.5%;
     }
+}
+
+button {
+    cursor: pointer;
 }
