--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -69,6 +69,14 @@
 }
 
 .generator {
+    button {
+        color: #414141;
+        border: none;
+        font-size: 0.875rem;
+        font-weight: bold;
+        border-radius: 0.5rem;
+        transition: filter 0.2s;
+    }
     .displayResult {
         width: 100%;
         label {
@@ -84,13 +92,8 @@
             padding: 0 0 0 0.313rem;
         }
         button {
-            border: none;
-            font-size: 0.875rem;
-            font-weight: bold;
             margin-left: 1rem;
             padding: 0.5rem 1rem;
-            border-radius: 0.5rem;
-            transition: filter 0.2s;
         }
         button:hover {
             filter: brightness(0.9);
@@ -98,12 +101,7 @@
     }
     .generatorButton {
         button {
-            border: none;
-            font-size: 0.875rem;
-            font-weight: bold;
             padding: 0.7rem 1rem;
-            border-radius: 0.5rem;
-            transition: filter 0.2s;
             margin-top: 2rem;
         }
         button:hover {
