--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -103,6 +103,7 @@
         button {
             padding: 0.7rem 1rem;
             margin-top: 2rem;
+            width: 12.5rem;
         }
         button:hover {
             filter: brightness(0.9);
