--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -98,6 +98,12 @@
         button:hover {
             filter: brightness(0.9);
         }
+        .copySuccess {
+            font-size: 1rem;
+            color: #10b462;
+            font-weight: bold;
+            margin-left: 0.5rem;
+        }
     }
     .generatorButton {
         button {
