--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -115,4 +115,14 @@
             filter: brightness(0.9);
         }
     }
+    .passwordStrengthDisplay {
+        margin-top: 1rem;
+        label,
+        strong {
+            font-size: 0.875rem;
+        }
+        strong {
+            margin-left: 1rem;
+        }
+    }
 }
