--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -5,7 +5,9 @@
 }
 
 .content {
-    margin-top: 2rem;
+    width: 100%;
+    margin: 2rem;
+    margin-top: 3rem;
     display: grid;
     grid-template-columns: repeat(2, minmax(400px, 600px));
     gap: 2rem;
@@ -84,8 +86,8 @@
             margin-right: 1rem;
         }
         input {
-            min-width: 250px;
-            max-width: 400px;
+            max-width: 18.75rem;
+            width: 100%;
             height: 1.875rem;
             font-size: 0.875rem;
             color: #008040;
@@ -124,5 +126,59 @@
         strong {
             margin-left: 1rem;
         }
+    }
+}
+
+// Media query
+
+/* Extra small devices (phones, 600px and down) */
+
+@media only screen and (max-width: 600px) {
+    .content {
+        grid-template-columns: repeat(1, minmax(250px, 100%));
+    }
+    .generator {
+        .displayResult {
+            input {
+                width: 9.375rem;
+            }
+        }
+    }
+}
+
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+
+@media only screen and (min-width: 600px) {
+    .content {
+        grid-template-columns: repeat(1, minmax(300px, 100%));
+    }
+}
+
+
+/* Medium devices (landscape tablets, 768px and up) */
+
+@media only screen and (min-width: 768px) {
+    .content {
+        grid-template-columns: repeat(2, minmax(350px, 100%));
+    }
+}
+
+
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media only screen and (min-width: 992px) {
+    .content {
+        grid-template-columns: repeat(2, minmax(400px, 100%));
+    }
+}
+
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+
+@media only screen and (min-width: 1200px) {
+    .wrapper {
+        max-width: 1300px;
+        margin: 0 auto;
     }
 }
