refactor: add minmax value to password lenght input

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -67,6 +67,11 @@
         div input {
             margin-right: 0.5rem;
         }
+        .passwordLength {
+            input {
+                width: 11.063rem;
+            }
+        }
     }
 }
 
