--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -91,8 +91,7 @@
             margin-right: 1rem;
         }
         input {
-            max-width: 18.75rem;
-            width: 100%;
+            width: 15rem;
             height: 1.875rem;
             font-size: 0.875rem;
             color: #008040;
