feat: add root colors

--- a/src/styles/colorPasswordStrength.css
+++ b/src/styles/colorPasswordStrength.css
@@ -1,15 +1,15 @@
 .Weak {
-    color: #f25f5c;
+    color: var(--red-2);
 }
 
 .Fair {
-    color: #ffe066;
+    color: var(--yellow-2);
 }
 
 .Good {
-    color: #247ba0;
+    color: var(--blue);
 }
 
 .Strong {
-    color: #008040;
+    color: var(--text-green);
 }
