feat: add dark theme and theme context

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -75,6 +75,11 @@
     }
 }
 
+.dark {
+    background: var(--background-container-dark);
+    color: var(--text-white);
+}
+
 .generator {
     button {
         color: var(--text-gray);
