--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -4,6 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    .dark {
+        color: var(--text-white);
+    }
     .logo {
         display: flex;
         flex-direction: row;
