--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,7 +2,7 @@
     --background-light: #f5f5f5;
     --background-dark: #121214;
     --background-container-light: #ffffff;
-    --background-container-dark: ##202024;
+    --background-container-dark: #202024;
     --text-white: #f5f5f5;
     --text-black: #0e0e10;
     --text-green: #008040;
@@ -24,7 +24,6 @@
 }
 
 body {
-    background-color: var(--background-light);
     color: var(--text-black);
     font-family: "Montserrat", sans-serif;
 }
