--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -2,6 +2,7 @@
     padding: 1rem;
     margin-top: 1rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     .dark {
@@ -15,6 +16,19 @@
             font-weight: 400;
             font-size: 1.5rem;
             margin-left: 1rem;
+        }
+    }
+    .settings {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 1rem;
+        span {
+            margin-right: 1rem;
+            font-size: 0.875rem;
+        }
+        svg {
+            cursor: pointer;
         }
     }
 }
