refactor: color default for icons

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -7,6 +7,9 @@
     justify-content: center;
     .dark {
         color: var(--text-white);
+        svg {
+            color: var(--text-white);
+        }
     }
     .logo {
         display: flex;
