--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,10 @@
 :root {
     --background-light: #f5f5f5;
-    --background-dark: #121214;
+    --background-dark: #0e0e11;
     --background-container-light: #ffffff;
-    --background-container-dark: #202024;
-    --text-white: #f5f5f5;
-    --text-black: #0e0e10;
+    --background-container-dark: #18181b;
+    --text-white: #eeeeee;
+    --text-black: #0e0e11;
     --text-green: #008040;
     --text-green-2: #10b462;
     --text-gray: #414141;
