--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -98,6 +98,7 @@
             width: 15rem;
             height: 1.875rem;
             font-size: 0.875rem;
+            font-weight: bold;
             color: var(--text-green);
             padding: 0 0 0 0.313rem;
         }
