feat: add indicator to light and dark theme

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -33,5 +33,11 @@
         svg {
             cursor: pointer;
         }
+        svg:first-child {
+            margin-right: 0.5rem;
+        }
+        svg:last-child {
+            margin-left: 0.5rem;
+        }
     }
 }
