--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -21,7 +21,7 @@
             margin-left: 1rem;
         }
     }
-    .settings {
+    .themeSwitch {
         display: flex;
         align-items: center;
         justify-content: center;
