fix: change input padding

--- a/src/styles/home.module.scss
+++ b/src/styles/home.module.scss
@@ -69,6 +69,10 @@
         .passwordLength {
             input {
                 width: 11.063rem;
+                padding: 0.2rem;
+                border-radius: 0.5rem;
+                border: none;
+                border: 2px solid var(--box-shadow-color-dark);
             }
         }
     }
@@ -100,7 +104,10 @@
             font-size: 0.875rem;
             font-weight: bold;
             color: var(--text-green);
-            padding: 0 0 0 0.313rem;
+            padding: 0.5rem 0 0.5rem 0.313rem;
+            border-radius: 0.5rem;
+            border: none;
+            border: 2px solid var(--box-shadow-color-dark);
         }
         button {
             margin-left: 1rem;
